Made login button larger and reduced left margin

--- a/src/njk/templates/partials/global/navbar.njk
+++ b/src/njk/templates/partials/global/navbar.njk
@@ -67,8 +67,8 @@
         </div>
       </li>
 
-      <li class="nav-item ml-3 mr-2">
-        <a class="btn btn-sm btn-primary" href="login.html">Login</a>
+      <li class="nav-item my-2">
+        <a class="btn btn-primary" href="login.html">Login</a>
       </li>
 
     </ul>
