--- a/src/njk/templates/partials/component/carousel-testimonial-photos.njk
+++ b/src/njk/templates/partials/component/carousel-testimonial-photos.njk
@@ -14,17 +14,17 @@
                     <div class="row">
                         <div class="col-7 col-md-4 col-lg-3 mx-auto mb-3 mb-md-0 d-block">
                             <figure class="image image-1by1">
-                                <img src="https://placehold.it/300" alt="placeholder">
+                                <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="Alex Hvostik" class="rounded">
                             </figure>
                         </div>
                         <!-- /.col-md-4 col-lg-3 -->
                         <div class="col-md-8 col-lg-9">
                             <div class="wysiwyg">
-                                <p>{% include "partials/wysiwyg/sentence-lg.njk" %}</p>
+                                <p>“I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”</p>
                             </div>
                             <!-- /.wysiwyg -->
-                            <div class="font-weight-bold">John H. Smith</div>
-                            <div class="text-uppercase">Creative Artist</div>
+                            <div class="carousel-testimonial-photos__name font-weight-bold">Alex Hvostik</div>
+                            <div class="carousel-testimonial-photos__title text-uppercase">Business Intelligence</div>
                         </div>
                         <!-- /.col-md-8 col-lg-9 -->
                     </div>
@@ -36,17 +36,17 @@
                     <div class="row">
                         <div class="col-7 col-md-4 col-lg-3 mx-auto mb-3 mb-md-0 d-block">
                             <figure class="image image-1by1">
-                                <img src="https://placehold.it/300" alt="placeholder">
+                                <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="Alex Hvostik" class="rounded">
                             </figure>
                         </div>
                         <!-- /.col-md-4 col-lg-3 -->
                         <div class="col-md-8 col-lg-9">
                             <div class="wysiwyg">
-                                <p>{% include "partials/wysiwyg/sentence-lg.njk" %}</p>
+                                <p>“I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”</p>
                             </div>
                             <!-- /.wysiwyg -->
-                            <div class="font-weight-bold">John H. Smith</div>
-                            <div class="text-uppercase">Creative Artist</div>
+                            <div class="carousel-testimonial-photos__name font-weight-bold">Alex Hvostik</div>
+                            <div class="carousel-testimonial-photos__title text-uppercase">Business Intelligence</div>
                         </div>
                         <!-- /.col-md-8 col-lg-9 -->
                     </div>
@@ -58,17 +58,17 @@
                     <div class="row">
                         <div class="col-7 col-md-4 col-lg-3 mx-auto mb-3 mb-md-0 d-block">
                             <figure class="image image-1by1">
-                                <img src="https://placehold.it/300" alt="placeholder">
+                                <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="Alex Hvostik" class="rounded">
                             </figure>
                         </div>
                         <!-- /.col-md-4 col-lg-3 -->
                         <div class="col-md-8 col-lg-9">
                             <div class="wysiwyg">
-                                <p>{% include "partials/wysiwyg/sentence-lg.njk" %}</p>
+                                <p>“I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”</p>
                             </div>
                             <!-- /.wysiwyg -->
-                            <div class="font-weight-bold">John H. Smith</div>
-                            <div class="text-uppercase">Creative Artist</div>
+                            <div class="carousel-testimonial-photos__name font-weight-bold">Alex Hvostik</div>
+                            <div class="carousel-testimonial-photos__title text-uppercase">Business Intelligence</div>
                         </div>
                         <!-- /.col-md-8 col-lg-9 -->
                     </div>
